--- a/src/static/app/sass/helpers/_variables.scss
+++ b/src/static/app/sass/helpers/_variables.scss
@@ -13,7 +13,9 @@ $silverRust: #c8c4bb;
 $deepCarminePink: #e3323a;
 $alabaster: #f9f9f9;
 $gainsboro: #dddddd;
+$celestial-blue: #4997D0;
 
 $background: $cararraTan;
 $primaryRed: $deepCarminePink;
+$primary-blue: $celestial-blue;
 $border-color: $gainsboro;
