--- a/src/static/app/css/main.css
+++ b/src/static/app/css/main.css
@@ -777,9 +777,9 @@ body { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1
 input, button, select, textarea { font-family: inherit; font-size: inherit; line-height: inherit; }
 
 /* line 48, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_scaffolding.scss */
-a { color: #e3323a; text-decoration: none; }
+a { color: #4997D0; text-decoration: none; }
 /* line 52, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_scaffolding.scss */
-a:hover, a:focus { color: #b0181f; text-decoration: underline; }
+a:hover, a:focus { color: #2a70a3; text-decoration: underline; }
 /* line 58, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_scaffolding.scss */
 a:focus { outline: thin dotted; outline: 5px auto -webkit-focus-ring-color; outline-offset: -2px; }
 
@@ -885,10 +885,10 @@ mark, .mark { background-color: #fcf8e3; padding: .2em; }
 .text-muted { color: #b0a698; }
 
 /* line 5, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_text-emphasis.scss */
-.text-primary { color: #e3323a; }
+.text-primary { color: #4997D0; }
 
 /* line 8, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_text-emphasis.scss */
-a.text-primary:hover { color: #c71b23; }
+a.text-primary:hover { color: #2f7eb7; }
 
 /* line 5, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_text-emphasis.scss */
 .text-success { color: #3c763d; }
@@ -918,10 +918,10 @@ a.text-danger:hover { color: #843534; }
 .bg-primary { color: #fff; }
 
 /* line 5, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_background-variant.scss */
-.bg-primary { background-color: #e3323a; }
+.bg-primary { background-color: #4997D0; }
 
 /* line 8, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_background-variant.scss */
-a.bg-primary:hover { background-color: #c71b23; }
+a.bg-primary:hover { background-color: #2f7eb7; }
 
 /* line 5, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_background-variant.scss */
 .bg-success { background-color: #dff0d8; }
@@ -1844,15 +1844,15 @@ textarea.input-lg, .input-group-lg > textarea.form-control, .input-group-lg > te
 .btn-default .badge { color: #fff; background-color: #332e27; }
 
 /* line 63, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_buttons.scss */
-.btn-primary { color: #fff; background-color: #e3323a; border-color: #dd1e27; }
+.btn-primary { color: #fff; background-color: #4997D0; border-color: #358bcb; }
 /* line 11, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_buttons.scss */
-.btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle { color: #fff; background-color: #c71b23; border-color: #a7171d; }
+.btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle { color: #fff; background-color: #2f7eb7; border-color: #286a9a; }
 /* line 21, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_buttons.scss */
 .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle { background-image: none; }
 /* line 29, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_buttons.scss */
-.btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active { background-color: #e3323a; border-color: #dd1e27; }
+.btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active { background-color: #4997D0; border-color: #358bcb; }
 /* line 40, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_buttons.scss */
-.btn-primary .badge { color: #e3323a; background-color: #fff; }
+.btn-primary .badge { color: #4997D0; background-color: #fff; }
 
 /* line 67, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_buttons.scss */
 .btn-success { color: #fff; background-color: #5cb85c; border-color: #4cae4c; }
@@ -1899,13 +1899,13 @@ textarea.input-lg, .input-group-lg > textarea.form-control, .input-group-lg > te
 .btn-danger .badge { color: #d9534f; background-color: #fff; }
 
 /* line 88, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_buttons.scss */
-.btn-link { color: #e3323a; font-weight: normal; border-radius: 0; }
+.btn-link { color: #4997D0; font-weight: normal; border-radius: 0; }
 /* line 93, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_buttons.scss */
 .btn-link, .btn-link:active, .btn-link.active, .btn-link[disabled], fieldset[disabled] .btn-link { background-color: transparent; -webkit-box-shadow: none; box-shadow: none; }
 /* line 101, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_buttons.scss */
 .btn-link, .btn-link:hover, .btn-link:focus, .btn-link:active { border-color: transparent; }
 /* line 107, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_buttons.scss */
-.btn-link:hover, .btn-link:focus { color: #b0181f; text-decoration: underline; background-color: transparent; }
+.btn-link:hover, .btn-link:focus { color: #2a70a3; text-decoration: underline; background-color: transparent; }
 /* line 115, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_buttons.scss */
 .btn-link[disabled]:hover, .btn-link[disabled]:focus, fieldset[disabled] .btn-link:hover, fieldset[disabled] .btn-link:focus { color: #b0a698; text-decoration: none; }
 
@@ -2176,7 +2176,7 @@ tbody.collapse.in { display: table-row-group; }
 /* line 34, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_navs.scss */
 .nav > li.disabled > a:hover, .nav > li.disabled > a:focus { color: #b0a698; text-decoration: none; background-color: transparent; cursor: true; }
 /* line 46, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_navs.scss */
-.nav .open > a, .nav .open > a:hover, .nav .open > a:focus { background-color: #efedea; border-color: #e3323a; }
+.nav .open > a, .nav .open > a:hover, .nav .open > a:focus { background-color: #efedea; border-color: #4997D0; }
 /* line 59, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_navs.scss */
 .nav .nav-divider { height: 1px; margin: 9px 0; overflow: hidden; background-color: #e5e5e5; }
 /* line 66, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_navs.scss */
@@ -2500,15 +2500,15 @@ tbody.collapse.in { display: table-row-group; }
 /* line 10, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_pagination.scss */
 .pagination > li { display: inline; }
 /* line 12, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_pagination.scss */
-.pagination > li > a, .pagination > li > span { position: relative; float: left; padding: 6px 12px; line-height: 1.42857; text-decoration: none; color: #e3323a; background-color: #fff; border: 1px solid #ddd; margin-left: -1px; }
+.pagination > li > a, .pagination > li > span { position: relative; float: left; padding: 6px 12px; line-height: 1.42857; text-decoration: none; color: #4997D0; background-color: #fff; border: 1px solid #ddd; margin-left: -1px; }
 /* line 25, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_pagination.scss */
 .pagination > li:first-child > a, .pagination > li:first-child > span { margin-left: 0; border-bottom-left-radius: 4px; border-top-left-radius: 4px; }
 /* line 32, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_pagination.scss */
 .pagination > li:last-child > a, .pagination > li:last-child > span { border-bottom-right-radius: 4px; border-top-right-radius: 4px; }
 /* line 41, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_pagination.scss */
-.pagination > li > a:hover, .pagination > li > a:focus, .pagination > li > span:hover, .pagination > li > span:focus { color: #b0181f; background-color: #efedea; border-color: #ddd; }
+.pagination > li > a:hover, .pagination > li > a:focus, .pagination > li > span:hover, .pagination > li > span:focus { color: #2a70a3; background-color: #efedea; border-color: #ddd; }
 /* line 51, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_pagination.scss */
-.pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus, .pagination > .active > span, .pagination > .active > span:hover, .pagination > .active > span:focus { z-index: 2; color: #fff; background-color: #e3323a; border-color: #e3323a; cursor: default; }
+.pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus, .pagination > .active > span, .pagination > .active > span:hover, .pagination > .active > span:focus { z-index: 2; color: #fff; background-color: #4997D0; border-color: #4997D0; cursor: default; }
 /* line 63, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_pagination.scss */
 .pagination > .disabled > span, .pagination > .disabled > span:hover, .pagination > .disabled > span:focus, .pagination > .disabled > a, .pagination > .disabled > a:hover, .pagination > .disabled > a:focus { color: #b0a698; background-color: #fff; border-color: #ddd; cursor: true; }
 
@@ -2561,9 +2561,9 @@ a.label:hover, a.label:focus { color: #fff; text-decoration: none; cursor: point
 .label-default[href]:hover, .label-default[href]:focus { background-color: #9a8d7b; }
 
 /* line 48, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_labels.scss */
-.label-primary { background-color: #e3323a; }
+.label-primary { background-color: #4997D0; }
 /* line 7, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_labels.scss */
-.label-primary[href]:hover, .label-primary[href]:focus { background-color: #c71b23; }
+.label-primary[href]:hover, .label-primary[href]:focus { background-color: #2f7eb7; }
 
 /* line 52, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_labels.scss */
 .label-success { background-color: #5cb85c; }
@@ -2594,7 +2594,7 @@ a.label:hover, a.label:focus { color: #fff; text-decoration: none; cursor: point
 /* line 31, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_badges.scss */
 .btn-xs .badge, .btn-group-xs > .btn .badge { top: 0; padding: 1px 5px; }
 /* line 39, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_badges.scss */
-.list-group-item.active > .badge, .nav-pills > .active > a > .badge { color: #e3323a; background-color: #fff; }
+.list-group-item.active > .badge, .nav-pills > .active > a > .badge { color: #4997D0; background-color: #fff; }
 /* line 44, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_badges.scss */
 .list-group-item > .badge { float: right; }
 /* line 47, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_badges.scss */
@@ -2632,7 +2632,7 @@ a.badge:hover, a.badge:focus { color: #fff; text-decoration: none; cursor: point
 .thumbnail .caption { padding: 9px; color: #332e27; }
 
 /* line 34, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_thumbnails.scss */
-a.thumbnail:hover, a.thumbnail:focus, a.thumbnail.active { border-color: #e3323a; }
+a.thumbnail:hover, a.thumbnail:focus, a.thumbnail.active { border-color: #4997D0; }
 
 /* line 9, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_alerts.scss */
 .alert { padding: 15px; margin-bottom: 20px; border: 1px solid transparent; border-radius: 4px; }
@@ -2686,7 +2686,7 @@ a.thumbnail:hover, a.thumbnail:focus, a.thumbnail.active { border-color: #e3323a
 .progress { overflow: hidden; height: 20px; margin-bottom: 20px; background-color: #f5f5f5; border-radius: 4px; -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1); box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1); }
 
 /* line 36, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_progress-bars.scss */
-.progress-bar { float: left; width: 0%; height: 100%; font-size: 12px; line-height: 20px; color: #fff; text-align: center; background-color: #e3323a; -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15); box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15); -webkit-transition: width 0.6s ease; -o-transition: width 0.6s ease; transition: width 0.6s ease; }
+.progress-bar { float: left; width: 0%; height: 100%; font-size: 12px; line-height: 20px; color: #fff; text-align: center; background-color: #4997D0; -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15); box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15); -webkit-transition: width 0.6s ease; -o-transition: width 0.6s ease; transition: width 0.6s ease; }
 
 /* line 54, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_progress-bars.scss */
 .progress-striped .progress-bar, .progress-bar-striped { background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent); background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent); background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0)); background-size: 40px 40px; }
@@ -2926,15 +2926,15 @@ a.list-group-item-danger.active, a.list-group-item-danger.active:hover, a.list-g
 .panel-default > .panel-footer + .panel-collapse > .panel-body { border-bottom-color: #ddd; }
 
 /* line 247, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_panels.scss */
-.panel-primary { border-color: #e3323a; }
+.panel-primary { border-color: #4997D0; }
 /* line 6, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_panels.scss */
-.panel-primary > .panel-heading { color: #fff; background-color: #e3323a; border-color: #e3323a; }
+.panel-primary > .panel-heading { color: #fff; background-color: #4997D0; border-color: #4997D0; }
 /* line 11, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_panels.scss */
-.panel-primary > .panel-heading + .panel-collapse > .panel-body { border-top-color: #e3323a; }
+.panel-primary > .panel-heading + .panel-collapse > .panel-body { border-top-color: #4997D0; }
 /* line 14, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_panels.scss */
-.panel-primary > .panel-heading .badge { color: #e3323a; background-color: #fff; }
+.panel-primary > .panel-heading .badge { color: #4997D0; background-color: #fff; }
 /* line 20, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_panels.scss */
-.panel-primary > .panel-footer + .panel-collapse > .panel-body { border-bottom-color: #e3323a; }
+.panel-primary > .panel-footer + .panel-collapse > .panel-body { border-bottom-color: #4997D0; }
 
 /* line 250, ../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_panels.scss */
 .panel-success { border-color: #d6e9c6; }
@@ -3389,6 +3389,17 @@ body { background-color: #fff; }
   .navbar-canteen .nav-canteen { margin-top: 40px !important; display: block; }
   /* line 30, ../sass/modules/_navbar-canteen.scss */
   .navbar-canteen .navbar-brand { float: left; } }
+
+/* line 3, ../sass/modules/_report-table.scss */
+.report-table th { cursor: pointer; }
+/* line 7, ../sass/modules/_report-table.scss */
+.report-table th .glyphicon { font-size: 10px; top: 0; }
+/* line 13, ../sass/modules/_report-table.scss */
+.report-table th .glyphicon-chevron:before { content: '\e113'; }
+/* line 18, ../sass/modules/_report-table.scss */
+.report-table th:hover, .report-table th.sorted { color: #e3323a; }
+/* line 22, ../sass/modules/_report-table.scss */
+.report-table th:hover .glyphicon-chevron:before, .report-table th.sorted .glyphicon-chevron:before { content: '\e114'; }
 
 /* line 1, ../sass/modules/_sort-form.scss */
 .sort-form { background-color: #f9f9f9; border: 1px solid #dddddd; margin-bottom: 10px; }
