--- a/src/static/app/sass/main.scss
+++ b/src/static/app/sass/main.scss
@@ -14,4 +14,5 @@
 // modules
 @import "modules/_navbar-brand";
 @import "modules/_navbar-canteen";
+@import "modules/_report-table";
 @import "modules/_sort-form";
