--- a/src/static/app/sass/main.scss
+++ b/src/static/app/sass/main.scss
@@ -14,5 +14,7 @@
 // modules
 @import "modules/_navbar-brand";
 @import "modules/_navbar-canteen";
+@import "modules/_navbar-login";
 @import "modules/_report-table";
-@import "modules/_sort-form";
+@import "modules/_form-sort";
+@import "modules/_form-signin";
