--- a/src/static/app/sass/bootstrap/_bootstrap-variables.scss
+++ b/src/static/app/sass/bootstrap/_bootstrap-variables.scss
@@ -156,9 +156,9 @@ $btn-default-color:              $birch !default;
 $btn-default-bg:                 #fff !default;
 $btn-default-border:             #ccc !default;
 
-$btn-primary-color:              #fff !default;
-$btn-primary-bg:                 $brand-primary !default;
-$btn-primary-border:             darken($btn-primary-bg, 5%) !default;
+$btn-primary-color:              $birch !default;
+$btn-primary-bg:                 $gainsboro !default;
+$btn-primary-border:             darken($btn-primary-bg, 20%) !default;
 
 $btn-success-color:              #fff !default;
 $btn-success-bg:                 $brand-success !default;
