--- a/src/static/app/sass/layout/_report-data-container.scss
+++ b/src/static/app/sass/layout/_report-data-container.scss
@@ -1,3 +1,11 @@
 .report-data-container {
-	margin-top: 10px;
+
+	margin-top: 20px;
+
+	@media (min-width: $screen-sm-min) {
+
+		margin-top: 0;
+
+	}
+
 }
